Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -177,26 +177,8 @@
       </details>
     </div>
 
-    <!-- cotas premiadas -->
-    <div class="cotas">
-      <h3>🔥 Cotas premiadas — Achou, ganhou!</h3>
-      <div class="c-grid" id="cotasGrid">
-        <!-- sample numbers; red = destaque -->
-        <div class="c-box">000000</div>
-        <div class="c-box">111111</div>
-        <div class="c-box">222222</div>
-        <div class="c-box">333333</div>
-        <div class="c-box">444444</div>
-        <div class="c-box">555555</div>
-        <div class="c-box">666666</div>
-        <div class="c-box">777777</div>
-        <div class="c-box">888888</div>
-        <div class="c-box">999999</div>
-        <div class="c-box bad">404040</div>
-        <div class="c-box">505050</div>
-        <div style="width:100%;margin-top:8px;color:var(--muted);font-size:13px">+ 15 NÚMEROS PREMIADOS de até R$200,00 — ver regulamento</div>
-      </div>
-    </div>
+    <!-- NOME DO GANHADOR DO DIA+DATA+PRÊMIO 👇🏻-->
+    <
 
     <div class="footer">
       <div style="font-weight:700">Contatos</div>
