--- a/index.html
+++ b/index.html
@@ -177,8 +177,20 @@
       </details>
     </div>
 
-    <!-- NOME DO GANHADOR DO DIA+DATA+PRÊMIO 👇🏻-->
-    <
+  <h1>🎁 Lista de Prêmios da Semana</h1>
+    <ul>
+        <li><span class="dia">Segunda:</span> 🌭 Hot dog 2 KILOS + Coca 2L</li>
+        <li><span class="dia">Terça:</span> 🍓 Mega barca de açaí com frutas e delícias</li>
+        <li><span class="dia">Quarta:</span> 🥟 Caixa com 100 mini salgados de festa + Coca 2L</li>
+        <li><span class="dia">Quinta:</span> 🍣 Combo 40 peças de comida japonesa + Coca 500ml</li>
+        <li><span class="dia">Sexta:</span> 🍕 Pizza tamanho família + Coca 2L</li>
+        <li><span class="dia">Sábado:</span> 🍔 4 lanches + Refrigerante 2L</li>
+        <li><span class="dia">Domingo:</span> 🥩 Vale rodízio - Boi Nobre (Mogi das Cruzes)</li>
+    </ul>
+
+</body>
+</html>
+
 
     <div class="footer">
       <div style="font-weight:700">Contatos</div>
