Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
         <span class="badge">Adquira já</span>
         <div style="font-size:12px;color:var(--muted)">Sorteio diário • 20:00</div>
       </div>
-      <h2>Prêmio de Hoje: Pizza Família + Refrigerante</h2>
+      <h2>Prêmio de Hoje: HOT DOG 2KG+ coca Z2 ltrs</h2>
       <div class="subtitle">Participe com apenas R$2,50 — ou pegue o pacote semanal com chances em dobro!</div>
-
-      <div class="prize-img" aria-hidden="true">
-        <!-- optional image; using Unsplash stable link -->
-        <img src="https://images.unsplash.com/photo-1594007654729-407eedc4be65?auto=format&fit=crop&w=1200&q=80" alt="Prêmio pizza e refrigerante">
-      </div>
+ 
+    <div class="premio">
+        <img src="https://cdn-icons-png.flaticon.com/512/3075/3075977.png" alt="Hot Dog">
+        <span>Segunda - Hot Dog 2 Kilos + Coca 2L</span>
+    </div>
 
       <div class="price-row">
         <div>
