--- a/index.html
+++ b/index.html
@@ -104,13 +104,10 @@
         <span class="badge">Adquira já</span>
         <div style="font-size:12px;color:var(--muted)">Sorteio diário • 20:00</div>
       </div>
-      <h2>Prêmio de Hoje: HOT DOG 2KG+ coca Z2 ltrs</h2>
+      <h2>Prêmio de Hoje: HOT DOG 2KG+ coca 2 ltrs</h2>
       <div class="subtitle">Participe com apenas R$2,50 — ou pegue o pacote semanal com chances em dobro!</div>
  
-    <div class="premio">
-        <img src="https://cdn-icons-png.flaticon.com/512/3075/3075977.png" alt="Hot Dog">
-        <span>Segunda - Hot Dog 2 Kilos + Coca 2L</span>
-    </div>
+    imagem aq
 
       <div class="price-row">
         <div>
