--- a/index.html
+++ b/index.html
@@ -104,10 +104,14 @@
         <span class="badge">Adquira já</span>
         <div style="font-size:12px;color:var(--muted)">Sorteio diário • 20:00</div>
       </div>
-      <h2>Prêmio de Hoje: HOT DOG 2KG+ coca 2 ltrs</h2>
+      <h2>Prêmio de hoje: BARCA DE AÇAI COMPLETA</h2>
       <div class="subtitle">Participe com apenas R$2,50 — ou pegue o pacote semanal com chances em dobro!</div>
  
-    imagem aq
+    
+    <div class="premio">
+        <img src="https://cdn-icons-png.flaticon.com/512/590/590769.png" alt="Barca de Açaí">
+        <span>Terça - Mega Barca de Açaí com frutas</span>
+    </div>
 
       <div class="price-row">
         <div>
