--- a/index.html
+++ b/index.html
@@ -106,12 +106,63 @@
       </div>
       <h2>Prêmio de hoje: BARCA DE AÇAI COMPLETA</h2>
       <div class="subtitle">Participe com apenas R$2,50 — ou pegue o pacote semanal com chances em dobro!</div>
- 
-    
-    <div class="premio">
-        <img src="https://cdn-icons-png.flaticon.com/512/590/590769.png" alt="Barca de Açaí">
-        <span>Terça - Mega Barca de Açaí com frutas</span>
+ DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Prêmio Hot Dog + Coca</title>
+  <style>
+    body {
+      background: #f5f5f5;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: white;
+      padding: 20px 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      display: flex;
+      gap: 40px;
+      align-items: center;
+    }
+    .item {
+      text-align: center;
+      max-width: 180px;
+    }
+    .item img {
+      width: 150px;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+    }
+    .item p {
+      margin-top: 12px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/1046/1046784.png" alt="Hot Dog" />
+      <p>Hot Dog Enorme - 2Kg</p>
     </div>
+    <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968534.png" alt="Coca-Cola 2L" />
+      <p>Coca-Cola - 2 Litros</p>
+    </div>
+  </div>
+</body>
+</html>
+>
 
       <div class="price-row">
         <div>
