--- a/index.html
+++ b/index.html
@@ -104,65 +104,13 @@
         <span class="badge">Adquira já</span>
         <div style="font-size:12px;color:var(--muted)">Sorteio diário • 20:00</div>
       </div>
-      <h2>Prêmio de hoje: BARCA DE AÇAI COMPLETA</h2>
+      <h2>Prêmio de Hoje: Pizza Família + Refrigerante</h2>
       <div class="subtitle">Participe com apenas R$2,50 — ou pegue o pacote semanal com chances em dobro!</div>
- DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Prêmio Hot Dog + Coca</title>
-  <style>
-    body {
-      background: #f5f5f5;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .container {
-      background: white;
-      padding: 20px 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      display: flex;
-      gap: 40px;
-      align-items: center;
-    }
-    .item {
-      text-align: center;
-      max-width: 180px;
-    }
-    .item img {
-      width: 150px;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-    }
-    .item p {
-      margin-top: 12px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #333;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/1046/1046784.png" alt="Hot Dog" />
-      <p>Hot Dog Enorme - 2Kg</p>
-    </div>
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968534.png" alt="Coca-Cola 2L" />
-      <p>Coca-Cola - 2 Litros</p>
-    </div>
-  </div>
-</body>
-</html>
->
+
+      <div class="prize-img" aria-hidden="true">
+        <!-- optional image; using Unsplash stable link -->
+        <img src="https://images.unsplash.com/photo-1594007654729-407eedc4be65?auto=format&fit=crop&w=1200&q=80" alt="Prêmio pizza e refrigerante">
+      </div>
 
       <div class="price-row">
         <div>
@@ -229,20 +177,26 @@
       </details>
     </div>
 
-  <h1>🎁 Lista de Prêmios da Semana</h1>
-    <ul>
-        <li><span class="dia">Segunda:</span> 🌭 Hot dog 2 KILOS + Coca 2L</li>
-        <li><span class="dia">Terça:</span> 🍓 Mega barca de açaí com frutas e delícias</li>
-        <li><span class="dia">Quarta:</span> 🥟 Caixa com 100 mini salgados de festa + Coca 2L</li>
-        <li><span class="dia">Quinta:</span> 🍣 Combo 40 peças de comida japonesa + Coca 500ml</li>
-        <li><span class="dia">Sexta:</span> 🍕 Pizza tamanho família + Coca 2L</li>
-        <li><span class="dia">Sábado:</span> 🍔 4 lanches + Refrigerante 2L</li>
-        <li><span class="dia">Domingo:</span> 🥩 Vale rodízio - Boi Nobre (Mogi das Cruzes)</li>
-    </ul>
-
-</body>
-</html>
-
+    <!-- cotas premiadas -->
+    <div class="cotas">
+      <h3>🔥 Cotas premiadas — Achou, ganhou!</h3>
+      <div class="c-grid" id="cotasGrid">
+        <!-- sample numbers; red = destaque -->
+        <div class="c-box">000000</div>
+        <div class="c-box">111111</div>
+        <div class="c-box">222222</div>
+        <div class="c-box">333333</div>
+        <div class="c-box">444444</div>
+        <div class="c-box">555555</div>
+        <div class="c-box">666666</div>
+        <div class="c-box">777777</div>
+        <div class="c-box">888888</div>
+        <div class="c-box">999999</div>
+        <div class="c-box bad">404040</div>
+        <div class="c-box">505050</div>
+        <div style="width:100%;margin-top:8px;color:var(--muted);font-size:13px">+ 15 NÚMEROS PREMIADOS de até R$200,00 — ver regulamento</div>
+      </div>
+    </div>
 
     <div class="footer">
       <div style="font-weight:700">Contatos</div>
@@ -335,3 +289,5 @@
 </body>
 </html>
 
+
+---
