Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -177,26 +177,20 @@
       </details>
     </div>
 
-    <!-- cotas premiadas -->
-    <div class="cotas">
-      <h3>🔥 Cotas premiadas — Achou, ganhou!</h3>
-      <div class="c-grid" id="cotasGrid">
-        <!-- sample numbers; red = destaque -->
-        <div class="c-box">000000</div>
-        <div class="c-box">111111</div>
-        <div class="c-box">222222</div>
-        <div class="c-box">333333</div>
-        <div class="c-box">444444</div>
-        <div class="c-box">555555</div>
-        <div class="c-box">666666</div>
-        <div class="c-box">777777</div>
-        <div class="c-box">888888</div>
-        <div class="c-box">999999</div>
-        <div class="c-box bad">404040</div>
-        <div class="c-box">505050</div>
-        <div style="width:100%;margin-top:8px;color:var(--muted);font-size:13px">+ 15 NÚMEROS PREMIADOS de até R$200,00 — ver regulamento</div>
-      </div>
-    </div>
+    
+    <h1>🎁 Lista de Prêmios da Semana</h1>
+    <ul>
+        <li><span class="dia">Segunda:</span> 🌭 Hot dog 2 KILOS + Coca 2L</li>
+        <li><span class="dia">Terça:</span> 🍓 Mega barca de açaí com frutas e delícias</li>
+        <li><span class="dia">Quarta:</span> 🥟 Caixa com 100 mini salgados de festa + Coca 2L</li>
+        <li><span class="dia">Quinta:</span> 🍣 Combo 40 peças de comida japonesa + Coca 500ml</li>
+        <li><span class="dia">Sexta:</span> 🍕 Pizza tamanho família + Coca 2L</li>
+        <li><span class="dia">Sábado:</span> 🍔 4 lanches + Refrigerante 2L</li>
+        <li><span class="dia">Domingo:</span> 🥩 Vale rodízio - Boi Nobre (Mogi das Cruzes)</li>
+    </ul>
+
+</body>
+</html>
 
     <div class="footer">
       <div style="font-weight:700">Contatos</div>
